@@ -1,3 +1,4 @@
+* Lose FLAG_FIXPOLL, from Dave Mills.
 (4.2.5p179) 2009/05/23 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1041] xmt -> aorg timestamp cleanup from Dave Mills,
   reported by Dave Hart.
